--- a/css/index.css
+++ b/css/index.css
@@ -211,3 +211,151 @@ body {
     text-align: center;
     padding: 10px;
 }
+
+
+/* <!--------------------------------Contact --------------------------------> */
+
+
+
+.contact-info {
+    padding: 20px;
+    background-color: #f8f9fa; /* Light gray background */
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Soft shadow */
+}
+
+.contact-info h3 {
+    color: #89d1a5;;
+}
+
+.contact-info p {
+    color: #6c757d;;
+}
+
+.contact-info img {
+    max-width: 100%;
+    height: auto;
+}
+
+.contact-form {
+    padding: 20px;
+    background-color: #f8f9fa; /* Light gray background */
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Soft shadow */
+    height: 100%;
+}
+
+.contact-form .form-group {
+    margin-bottom: 20px;
+}
+
+.contact-form label {
+    color: #6c757d; 
+    font-size: 18px; 
+    font-weight: bold; /* Bold font weight */
+    margin-bottom: 8px; /* Space below each label */
+    display: block; /* Ensure labels appear on their own line */
+}
+
+.contact-form input{
+    display: block;
+    margin-top: 15px;
+    justify-content: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: rgb(101, 221, 125);
+    border-radius: 24px;
+    transition: 0.25s;
+    text-decoration: none;
+    width: 100%;
+}
+
+.contact-form textarea {
+    resize: none; /* Disable textarea resizing */
+    display: block;
+    margin-top: 15px;
+    justify-content: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: rgb(101, 221, 125);
+    border-radius: 24px;
+    transition: 0.25s;
+    text-decoration: none;
+    width: 100%;
+}
+
+.contact-form a {
+    display: block;
+    margin-top: 15px;
+    text-align: center;
+    justify-content: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: rgb(101, 221, 125);
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+    text-decoration: none;
+    max-width: 250px;
+}
+
+.contact-form a:hover {
+    background: #2ecc71;
+    color: white;
+}
+
+
+/* <!--------------------------------Footer --------------------------------> */
+
+
+.footer-container {
+    background-color: #343a40; 
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
+
+.footer-learn-aptitude a,
+.footer-companies a,
+.footer-resources a {
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    font-size: 18px;
+    padding-top: 10px;
+}
+
+.footer-learn-aptitude a:hover,
+.footer-companies a:hover,
+.footer-resources a:hover {
+    color: yellow;
+    font-size: 20px;
+}
+
+
+.footer-learn-title {
+    color: #ffffff; 
+    font-size: 25px; 
+    font-weight: bold; 
+    margin-bottom: 8px; 
+    display: block; 
+} 
+
+
+
+
+/* placement yatra
+
+.footer-intro a{
+    color: #343a40;
+}
+.footer-intro a:hover {
+    color: #89d1a5;
+    text-decoration: none; 
+} 
+
+*/
+
