--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ body {
 }
 #title{
     color: #42875c;
-    transition: color 0.3s;
+    font-size: 30px;
 }
 
 /* Navbar links */
@@ -61,6 +61,28 @@ body {
     margin-top: -1px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+}
+
+.nav-item .login ,
+.nav-item .subscription{
+    display: block;
+    text-align: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: rgb(101, 221, 125);
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+    text-decoration: none;
+    max-width: 250px;
+}
+
+.nav-item .login:hover,
+.nav-item .subscription:hover
+{
+    background: #2ecc71;
+    color: white;
 }
 
 /* Search form */
@@ -222,6 +244,7 @@ body {
     background-color: #f8f9fa; /* Light gray background */
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1); /* Soft shadow */
+    height: 100%;
 }
 
 .contact-info h3 {
@@ -257,7 +280,8 @@ body {
     display: block; /* Ensure labels appear on their own line */
 }
 
-.contact-form input{
+.contact-form input,
+.contact-form textarea{
     display: block;
     margin-top: 15px;
     justify-content: center;
@@ -271,26 +295,10 @@ body {
     width: 100%;
 }
 
-.contact-form textarea {
-    resize: none; /* Disable textarea resizing */
-    display: block;
-    margin-top: 15px;
-    justify-content: center;
-    border: 2px solid #2ecc71;
-    padding: 14px 40px;
-    outline: none;
-    color: rgb(101, 221, 125);
-    border-radius: 24px;
-    transition: 0.25s;
-    text-decoration: none;
-    width: 100%;
-}
-
-.contact-form a {
+.contact-form a{
     display: block;
     margin-top: 15px;
     text-align: center;
-    justify-content: center;
     border: 2px solid #2ecc71;
     padding: 14px 40px;
     outline: none;
@@ -347,15 +355,4 @@ body {
 
 
 
-/* placement yatra
-
-.footer-intro a{
-    color: #343a40;
-}
-.footer-intro a:hover {
-    color: #89d1a5;
-    text-decoration: none; 
-} 
-
-*/
 
