--- a/css/user-login.css
+++ b/css/user-login.css
@@ -1,6 +1,30 @@
 body {
     padding: 2rem;
 }
+
+.nav-item .home ,
+.nav-item .subscription{
+    display: block;
+    text-align: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: rgb(101, 221, 125);
+    border-radius: 24px;
+    transition: 0.25s;
+    cursor: pointer;
+    text-decoration: none;
+    max-width: 250px;
+}
+
+.nav-item .home:hover,
+.nav-item .subscription:hover
+{
+    background: #2ecc71;
+    color: white;
+}
+
+
 form {
     max-width: 500px;
     margin: auto;
@@ -12,8 +36,53 @@ form {
 .form-group {
     margin-bottom: 1.5rem;
 }
+
+.form-group label{
+    color: #6c757d; 
+    font-size: 18px; 
+    font-weight: bold; /* Bold font weight */
+    margin-bottom: 8px; /* Space below each label */
+    display: block; /* Ensure labels appear on their own line */
+
+}
+
+.form-group input{
+    display: block;
+    margin-top: 15px;
+    text-align: center;
+    justify-content: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: rgb(101, 221, 125);
+    border-radius: 24px;
+    transition: 0.25s;
+    text-decoration: none;
+    width: 100%;
+}
+
+.form-group a,
+button{
+    display: flex;
+    margin-top: 20px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #2ecc71;
+    padding: 14px 40px;
+    outline: none;
+    color: white;
+    background: #2ecc71;
+    border-radius: 24px;
+    transition: 0.25s;
+    text-decoration: none;
+    width: 100%;
+}
+
+
 .form-control-feedback {
     display: none;
     font-size: 0.85em;
     color: red;
+    background-color: blue;
 }
