--- a/css/Topics.css
+++ b/css/Topics.css
@@ -1,9 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
+
+body {
+    font-family: Arial, sans-serif;
+}
+
 
 /*------------------------------- Navbar -------------------------------*/
 .navbar {
@@ -83,80 +87,21 @@ body {
 }
 
 
-/*------------------------------- content -------------------------------*/
+/*------------------------------- banner -------------------------------*/
 
-table {
-    font-family: arial, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
-  }
-  
-  td, th {
-    border: 1px solid #dddddd;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  tr:nth-child(even) {
-    background-color: #dddddd;
-  }
-
-  /* <!--------------------------------content ----------------------------------> */
-
-.container{
+.content {
+    background: #89d1a5;
+    padding: 20px;
     border-radius: 10px;
-}
-
-.sections {
-    color: white;
-    background-color: #2ecc71;
-    text-align: center;
-}
-
-.sections a {
-    text-decoration: none;
-    padding: 8px 16px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
-    display: block;
-}
-
-.sections a:hover {
-    background-color: #27ae60;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 
+/*------------------------------- topics -------------------------------*/
 
-#AccentureCognative{
-    display: none;
-}
-#AccentureTechnical{
-    display: none;
-}
-#AccentureCoding{
-    display:none ;
-}
-#AccentureCommunication{
-display: none;
-}
-
-
-#DeloitteQuants{
-    display: none;
-}
-#DeloitteVerbal{
-    display: none;
-}
-#DeloitteLogical{
-    display: none;
-}
-#DeloitteTechnical{
-    display: none;
-}
-#DeloitteCoding{
-    display: none;
-}
+/* .container ul li{
+    padding: 10px;
+} */
 
 
 /* <!--------------------------------Footer --------------------------------> */
@@ -205,3 +150,7 @@ display: none;
 .social-icon:hover {
     transform: scale(1.2);
 }
+
+
+
+
