--- a/css/index.css
+++ b/css/index.css
@@ -85,16 +85,8 @@ body {
     color: white;
 }
 
-/* Search form */
-/* .navbar .form-control {
-    border-radius: 20px;
-    padding-left: 20px;
-    transition: box-shadow 0.3s;
-}
-
-.navbar .form-control:focus {
-    box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
-    border-color: #007bff;
+/* ul li{
+    padding: 10px;
 } */
 
 
